Tests/typing/bad/testfile-duplicate-3.jl

struct S a; b end
struct S c; d end
